# hexlet-django-blog

./: README.md  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_comment.py  0003_articlecomment.py
hexlet_django_blog/templates/: about.html  index.html
hexlet_django_blog/templates/articles/: comment_ok.html  create.html  index.html
